[gd_scene load_steps=16 format=2]

[ext_resource path="res://nodes/HitBox.gd" type="Script" id=1]
[ext_resource path="res://homing_demo/weapons/Missile.gd" type="Script" id=2]
[ext_resource path="res://weapons/particle_bullet.png" type="Texture" id=3]
[ext_resource path="res://homing_demo/weapons/t_40_02.png" type="Texture" id=4]
[ext_resource path="res://addons/gdquest_visualization_tools/2d/shaders/Shape2D.tres" type="Shader" id=5]
[ext_resource path="res://addons/gdquest_visualization_tools/2d/DebugCollisionShape2D.gd" type="Script" id=6]

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.31339, 0.777778, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.930664, 0.798064, 0.112698, 1, 0.933594, 0.072937, 0.072937, 1, 1, 0, 0, 0 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.475936, 0.418182 ), -2.6093, -2.6093, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=12]
lifetime_randomness = 0.65
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 25.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_curve = SubResource( 14 )
color_ramp = SubResource( 11 )

[sub_resource type="ShaderMaterial" id=15]
shader = ExtResource( 5 )

[sub_resource type="CapsuleShape2D" id=9]
radius = 14.0001
height = 45.9999

[sub_resource type="ShaderMaterial" id=16]
shader = ExtResource( 5 )

[sub_resource type="CircleShape2D" id=5]
radius = 1371.27

[node name="Missile" type="Node2D"]
script = ExtResource( 2 )
lifetime = 10.0

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -32, 0 )
amount = 200
lifetime = 0.5
randomness = 0.57
local_coords = false
process_material = SubResource( 12 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -3, 0 )
rotation = 0.785397
scale = Vector2( 0.250331, 0.250331 )
texture = ExtResource( 4 )

[node name="HitBox" type="Area2D" parent="."]
position = Vector2( -3, 0 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
self_modulate = Color( 0.690196, 0.188235, 0.360784, 1 )
material = SubResource( 15 )
rotation = 1.57079
shape = SubResource( 9 )
script = ExtResource( 6 )
palette = 2
theme = 0
theme_width = 2
theme_sample = 24

[node name="EnemyDetector" type="Area2D" parent="."]
position = Vector2( 42, 0 )
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
self_modulate = Color( 0.690196, 0.188235, 0.360784, 1 )
material = SubResource( 16 )
shape = SubResource( 5 )
script = ExtResource( 6 )
palette = 5
theme = 0
theme_width = 4
theme_sample = 24

[node name="AimLine" type="Line2D" parent="." groups=["GVTNavigation"]]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0.247059, 0.576471, 0.941176, 1 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="TargetLine" type="Line2D" parent="." groups=["GVTNavigation"]]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0.854902, 0.411765, 0.294118, 1 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="ChangeLine" type="Line2D" parent="." groups=["GVTNavigation"]]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0.290196, 1, 0, 1 )
begin_cap_mode = 2
end_cap_mode = 2
